# OpenMineSweeper

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  README.txt  launch.bat  launch.sh  linux_flags.cmake  main.c  windows_flags.cmake
docs/: knowhow.txt
src/: CMakeLists.txt
src/GameLogic/: CMakeLists.txt  GameLogic.c  GameLogic.h  GameLogic_Types.h
src/GameManager/: CMakeLists.txt  GameManager.c  GameManager.h  GameManager_Types.h
src/Gui/: CMakeLists.txt  Gui.c  Gui.h
